--- a/AllShader/AllShader.CSharp.Editor.csproj
+++ b/AllShader/AllShader.CSharp.Editor.csproj
@@ -16,7 +16,7 @@
     <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
-    <UnityVersion>5.6.4f1</UnityVersion>
+    <UnityVersion>5.6.0f3</UnityVersion>
     <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
@@ -27,7 +27,7 @@
     <IntermediateOutputPath>Temp\UnityVS_obj\Debug\</IntermediateOutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_5_6_4;UNITY_5_6;UNITY_5;UNITY_ANALYTICS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_RUNTIME_NAVMESH_BUILDING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;INCLUDE_DYNAMIC_GI;INCLUDE_GI;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_SCRIPTING_NEW_CSHARP_COMPILER;ENABLE_VIDEO;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU;UNITY_PRO_LICENSE</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_5_6_0;UNITY_5_6;UNITY_5;UNITY_ANALYTICS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_RUNTIME_NAVMESH_BUILDING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;INCLUDE_DYNAMIC_GI;INCLUDE_GI;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_SCRIPTING_NEW_CSHARP_COMPILER;ENABLE_VIDEO;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU;UNITY_PRO_LICENSE</DefineConstants>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -37,7 +37,7 @@
     <IntermediateOutputPath>Temp\UnityVS_obj\Release\</IntermediateOutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DefineConstants>TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_5_6_4;UNITY_5_6;UNITY_5;UNITY_ANALYTICS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_RUNTIME_NAVMESH_BUILDING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;INCLUDE_DYNAMIC_GI;INCLUDE_GI;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_SCRIPTING_NEW_CSHARP_COMPILER;ENABLE_VIDEO;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU;UNITY_PRO_LICENSE</DefineConstants>
+    <DefineConstants>TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_5_6_0;UNITY_5_6;UNITY_5;UNITY_ANALYTICS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_RUNTIME_NAVMESH_BUILDING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;INCLUDE_DYNAMIC_GI;INCLUDE_GI;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_SCRIPTING_NEW_CSHARP_COMPILER;ENABLE_VIDEO;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU;UNITY_PRO_LICENSE</DefineConstants>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
@@ -109,33 +109,105 @@
     <Reference Include="UnityEditor.Android.Extensions">
       <HintPath>Library\UnityAssemblies\UnityEditor.Android.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>Library\UnityAssemblies\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>Library\UnityAssemblies\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Common">
-      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\EditorFindReferences.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Props\Shader\BNN\Charactors\Char-BRDF-Combine.shader" />
+    <None Include="Assets\Props\Shader\BNN\Charactors\Char-BRDF-CombineTransparent.shader" />
+    <None Include="Assets\Props\Shader\BNN\Charactors\Char-BRDF.shader" />
+    <None Include="Assets\Props\Shader\BNN\Scene\FlapDock.shader" />
+    <None Include="Assets\Props\Shader\BNN\Scene\NoLightAlphaTree.shader" />
+    <None Include="Assets\Props\Shader\BNN\Scene\RealLightTree.shader" />
+    <None Include="Assets\Props\Shader\CalmWater\CalmWater - SingleSided.shader" />
+    <None Include="Assets\Props\Shader\CalmWater\CalmWater.cginc" />
+    <None Include="Assets\Props\Shader\CalmWater\CalmWater_Helper.cginc" />
+    <None Include="Assets\Props\Shader\DeemoRadialBlur.shader" />
     <None Include="Assets\Props\Shader\Resources\BumpedSpecular.shader" />
+    <None Include="Assets\Props\Shader\Resources\BumpedSpecularCutout.shader" />
     <None Include="Assets\Props\Shader\Resources\BumpedSpecularTerrain.shader" />
+    <None Include="Assets\Props\Shader\Resources\BumpedSpecularTransparent.shader" />
+    <None Include="Assets\Props\Shader\Resources\BumpedSpecularTree.shader" />
+    <None Include="Assets\Props\Shader\Resources\Char-NSR-W.shader" />
+    <None Include="Assets\Props\Shader\Resources\Character.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterCombine.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterCombineLocal.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterCombineLocalLow.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterCombineLow.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterCombineShow.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterCombineTransparent.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterLocal.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterLocalLow.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterLow.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterLowShow.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterPBR.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterPBRCombine.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterPBRCombineLocal.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterPBRCombineShow.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterPBRLocal.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterPBRShow.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterPBRSplit.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterShadowCast.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterShow.shader" />
+    <None Include="Assets\Props\Shader\Resources\CharacterTransparent.shader" />
     <None Include="Assets\Props\Shader\Resources\Cutout.shader" />
+    <None Include="Assets\Props\Shader\Resources\CutoutSoftEdge.shader" />
+    <None Include="Assets\Props\Shader\Resources\CutoutSoftEdgeEx.shader" />
     <None Include="Assets\Props\Shader\Resources\Diffuse.shader" />
+    <None Include="Assets\Props\Shader\Resources\EffectBloom.shader" />
+    <None Include="Assets\Props\Shader\Resources\EffectBlur.shader" />
+    <None Include="Assets\Props\Shader\Resources\EffectGrayscale.shader" />
     <None Include="Assets\Props\Shader\Resources\Emissive.shader" />
+    <None Include="Assets\Props\Shader\Resources\EmissiveCutout.shader" />
+    <None Include="Assets\Props\Shader\Resources\Grass.shader" />
+    <None Include="Assets\Props\Shader\Resources\NoLight.shader" />
+    <None Include="Assets\Props\Shader\Resources\PBR.shader" />
+    <None Include="Assets\Props\Shader\Resources\PBRCutout.shader" />
+    <None Include="Assets\Props\Shader\Resources\PBRTerrain.shader" />
+    <None Include="Assets\Props\Shader\Resources\PBRTree.shader" />
+    <None Include="Assets\Props\Shader\Resources\ShadowCutout.shader" />
+    <None Include="Assets\Props\Shader\Resources\ShadowDiffuse.shader" />
+    <None Include="Assets\Props\Shader\Resources\ShadowTerrain.shader" />
+    <None Include="Assets\Props\Shader\Resources\ShadowTransparent.shader" />
+    <None Include="Assets\Props\Shader\Resources\SpecularSimulate.shader" />
+    <None Include="Assets\Props\Shader\Resources\SpecularSimulateTerrain.shader" />
+    <None Include="Assets\Props\Shader\Resources\Terrain2.shader" />
+    <None Include="Assets\Props\Shader\Resources\Terrain3.shader" />
+    <None Include="Assets\Props\Shader\Resources\Terrain4.shader" />
+    <None Include="Assets\Props\Shader\Resources\Transparent.shader" />
     <None Include="Assets\Props\Shader\Resources\Tree.shader" />
+    <None Include="Assets\Props\Shader\Resources\UIClipParitcleAdditive.shader" />
+    <None Include="Assets\Props\Shader\Resources\UIClipParticleAlphaBlend.shader" />
+    <None Include="Assets\Props\Shader\Resources\UIFocusMask.shader" />
+    <None Include="Assets\Props\Shader\Resources\UIImageGray.shader" />
+    <None Include="Assets\Props\Shader\Resources\UIImageRT.shader" />
+    <None Include="Assets\Props\Shader\Resources\UIParitcleMask.shader" />
+    <None Include="Assets\Props\Shader\Resources\UIParticlesAdditive.shader" />
+    <None Include="Assets\Props\Shader\Resources\UnlitTransparent.shader" />
     <None Include="Assets\Props\Shader\Resources\Water.shader" />
+    <None Include="Assets\Props\Shader\Resources\Water2.shader" />
+    <None Include="Assets\Props\Shader\Shader说明.txt" />
+    <None Include="Assets\Props\Shader\T4M 4 Textures.shader" />
+    <None Include="Assets\Props\Shader\_DepthOfField\Bokeh34.shader" />
+    <None Include="Assets\Props\Shader\_DepthOfField\DepthOfField34.shader" />
+    <None Include="Assets\Props\Shader\_DepthOfField\DepthOfFieldDX11.shader" />
+    <None Include="Assets\Props\Shader\_DepthOfField\DepthOfFieldScatter.shader" />
+    <None Include="Assets\Props\Shader\_DepthOfField\SeparableBlur.shader" />
+    <None Include="Assets\Props\Shader\_DepthOfField\SeparableWeightedBlurDof34.shader" />
+    <None Include="Assets\Props\Shader\_DepthOfField\TiltShiftHdrLensBlur.shader" />
+    <None Include="Assets\Props\Shader\dianji.shader" />
+    <None Include="Assets\Props\Shader\fresnel.shader" />
+    <None Include="Assets\Props\Shader\jian.shader" />
+    <None Include="Assets\Props\Shader\mengjiang_jineng3.shader" />
+    <None Include="Assets\Props\Shader\niuqu.shader" />
+    <None Include="Assets\Props\Shader\yuan.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
